cleanup: - lvoge@cs.vu.nl -> lvoege@gmail.com in the README and INSTALLs - oude branches eruit - README update over wat het idee van de overblijvende branches is en wanneer   de oude zijn gedelete (nu dus).

--- a/INSTALL
+++ b/INSTALL
@@ -17,4 +17,4 @@ and then ignore any errors in docs/ like complaints about a missing dot
 binary.
 
 Lodewijk Voge 
-lodewijk@wirelessleiden.nl / lvoge@cs.vu.nl
+lodewijk@wirelessleiden.nl / lvoege@gmail.com
