--- a/README
+++ b/README
@@ -90,4 +90,4 @@ neighbor gets its first packet through and pulls the timestamp up to beyond
 what the attacker has intercepted.
 
 Lodewijk Voge
-lodewijk@wirelessleiden.nl / lvoge@cs.vu.nl
+lodewijk@wirelessleiden.nl / lvoege@gmail.com
