--- a/TODO
+++ b/TODO
@@ -9,3 +9,9 @@
 
 - integrate MAC.ml and Iface.ml. They deal in mostly the same issues, ethernet
   interfaces and their addresses.
+
+= package building = 
+
+- install of documentation files
+
+- man lvrouted(1) perhaps using http://docbook2x.sourceforge.net/
